# brainsheet

./: .clang-format  .gitignore  README.md  bs.1.test  bs.c  shell.nix
src/: CMakeLists.txt  bs.c
test/: 1.in
